force-app/main/default/objects/Employee_Conversion_Audit__c/Employee_Conversion_Audit__c.object-meta.xml
<CustomObject>
    <label>Employee Conversion Audit</label>
    <nameField>
        <displayFormat>ECA-{000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Conversion Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>