force-app/main/default/objects/Employee_Conversion_Audit__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Employee Conversion Audits</relationshipLabel>
    <relationshipName>EmployeeConversionAudits</relationshipName>
    <type>Lookup</type>
</CustomField>