force-app/main/default/objects/Employee_Conversion_Audit__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Employee Conversion Audits</relationshipLabel>
    <relationshipName>EmployeeConversionAudits</relationshipName>
    <type>Lookup</type>
</CustomField>