force-app/main/default/objects/Employee_Conversion_Audit__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Conversion Audits</relationshipLabel>
    <relationshipName>EmployeeConversionAudits</relationshipName>
    <type>Lookup</type>
</CustomField>