force-app/main/default/objects/Employee_Conversion_Audit__c/fields/Employment_Contract__c.field-meta.xml
<CustomField>
    <fullName>Employment_Contract__c</fullName>
    <label>Employment Contract</label>
    <referenceTo>Employment_Contract__c</referenceTo>
    <relationshipLabel>Employee Conversion Audits</relationshipLabel>
    <relationshipName>EmployeeConversionAudits</relationshipName>
    <type>Lookup</type>
</CustomField>