force-app/main/default/objects/Employee_Conversion_Audit__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <type>Text</type>
    <length>255</length>
</CustomField>