force-app/main/default/objects/Employee_Conversion_Audit__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Employee Conversion Audits</relationshipLabel>
    <relationshipName>EmployeeConversionAudits</relationshipName>
    <type>Lookup</type>
</CustomField>