force-app/main/default/objects/Employee_Conversion_Audit__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conversion</fullName>
                <default>true</default>
                <label>Conversion</label>
            </value>
            <value>
                <fullName>HiredPromotion</fullName>
                <label>Hired Promotion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>